<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/menu_dashboard" />

    <item
        android:id="@+id/nav_parking_location"
        android:icon="@drawable/ic_location"
        android:title="@string/menu_parking_location" />

    <item
        android:id="@+id/nav_payments"
        android:icon="@drawable/ic_payment"
        android:title="@string/menu_payments" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menu_notifications" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>
