<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".iu.auth.RegisterFragment">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg1"
        android:contentDescription="@string/bg_description" />

    <!-- Title -->
    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Name Input -->
    <LinearLayout
        android:id="@+id/nameInputContainer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitle">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/name_icon_desc"
            android:src="@drawable/ic_user" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient_input_background"
            android:gravity="center_vertical"
            android:hint="@string/name_hint"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <!-- Telephone Input -->
    <LinearLayout
        android:id="@+id/phoneInputContainer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInputContainer">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/phone_icon_desc"
            android:src="@drawable/ic_phone" />

        <EditText
            android:id="@+id/phoneInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient_input_background"
            android:gravity="center_vertical"
            android:hint="@string/phone_hint"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <!-- Email Input -->
    <LinearLayout
        android:id="@+id/emailInputContainer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneInputContainer">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/email_icon_desc"
            android:src="@drawable/ic_email" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient_input_background"
            android:gravity="center_vertical"
            android:hint="@string/email_hint"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <!-- License Plate Input -->
    <LinearLayout
        android:id="@+id/licensePlateInputContainer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputContainer">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/license_plate_icon_desc"
            android:src="@drawable/ic_car" />

        <EditText
            android:id="@+id/licensePlateInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient_input_background"
            android:gravity="center_vertical"
            android:hint="@string/license_plate_hint"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <!-- Password Input -->
    <LinearLayout
        android:id="@+id/passwordInputContainer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/licensePlateInputContainer">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/password_icon_desc"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient_input_background"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <!-- Register Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>
